<resources>
    <string name="app_name">Yoshnas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Register / Login</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="fashion">Fashion</string>
    <string name="shoes">Shoes</string>
    <string name="title_activity_shoes">ShoesActivity</string>
    <string name="title_activity_bottom_navi">BottomNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="title_dashboard">Category</string>
    <string name="title_notifications">Notifications</string>
    <string name="catogry_title">yoshnasbyela</string>
    <string name="saree_title">Sarees</string>
    <string name="price"> <b><i>1500</i></b></string>
    <string name="ohpair"><b>OhPair</b></string>
    <string name="price_strike"><strike> 1500</strike></string>
    <string name="rupees">Rs </string>
    <string name="continuetxt">Countinue</string>
    <string name="forgot">Forgot Password?</string>
    <string name="new_user"><u>New User  Register Now</u></string>
    <string name="description">Product Description</string>
    <string name="expandable_textview">Description
       \n  Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="sorting_text">Sorting</string>

    <string name="product_text">Products</string>
    <string name="relavence">Relavance</string>
    <string name="popularity">Popularity</string>
    <string name="Price_Low">Price Low To High</string>
    <string name="Price_High">Price High To Low</string>
    <string name="Sort_by_name">Sort By Name (A to Z)</string>
    <string name="Sort_by_name_desc">Sort By Name (Z to A)</string>
    <string name="deliverycharges">Delivery Charges :</string>
    <string name="payable">Payable Amount :</string>
    <string name="sort">Sort</string>
    <string name="finish">Finish</string>
    <string name="cartprice">Price :</string>
    <string name="cartdiscount">Discount :</string>
    <string name="carttotal">Total :</string>
    <string name="login">Yoho</string>
    <string name="phoneno">     +91  5886448325</string>
    <string name="addaddress"> + Add Address</string>
    <string name="enteraddress">Enter Your address</string>
    <string name="feedback">Feedback</string>
    <string name="logintxt">Login</string>
    <string name="logout">Logout</string>
    <string name="discount">-56%</string>
    <string name="add">Add to cart</string>
    <string name="profile">Profile</string>
    <string name="productname">Shree Creation Embroidered Bollywood Georgette,Net Saree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
    <string name="deliveryoption">Delivery Option:</string>
    <string name="itemis">. Item is available on this pincode</string>
    <string name="orderand">. Order and get it delivered in 5 days</string>

    <string name="addtocart">Add to cart</string>
    <string name="buynow">Buy Now</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="fcmpreference">com.yoho.myapplication.fcm_preference</string>
    <string name="fcmtoken">com.yoho.myapplication.fcm_token</string>
</resources>
